--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,16 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2>About Me</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+        
+        <p class="lead">I'm a software developer who loves progressive politics and wonderful prose.</p>
+        
+        <p>During the day I work as the Innovation Platform Director at <a href="http://ngpvan.com">NGP VAN</a>, which means I manage <a href="http://developers.ngpvan.com">our APIs</a> and help progressive causes of every stripe innovate and engage their supporters. I’ve spent decades as a progressive activist, and about the same time as a software developer. I started out with C, dabbled in Java, spent a little too long with PHP and <a href="https://www.drupal.org/u/shaisachs">Drupal</a>, had some laughs with NodeJS, but seem to be hanging around .NET more and more these days.</p>
+        
+        <p>I love reading, especially literary fiction, and have been doing my best to write a review of every single book I’ve read since 2013. Since I believe turnaround is fair play, I’ve dabbled in some writing projects of my own, and might one day share them. In my spare time I help organize a fun and fascinating <a href="http://www.meetup.com/Book-Club-for-Heartbreaking-Geniuses-and-Those-Who-Love-Them/events/229404910/">book club</a>.</p>
+        
+        <p>Oh yes, and here’s what I look like...</p>
+        
+        <p><img src="/img/avatar.jpg" alt="avatar" /></p>
       </div>
     </div>
     <!-- /.row -->
