--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
-        <h4><strong>{{ site.owner }}</strong>
-        </h4>
+        <h4><strong>{{ site.owner }}</strong></h4>
+        
+        <p><img src="/img/avatar.jpg" alt="avatar" /></p>
         <p>
           {% for address in site.address %}
           {{ address.line }}<br>
