--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,5 +11,8 @@
     <li>
       <a href="#projects" onclick = $("#menu-close").click(); >Projects</a>
     </li>
+    <li>
+      <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
+    </li>
   </ul>
 </nav>
