--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,6 +9,7 @@
   {% include header.html %}
   {% include about.html %}
   {% include projects.html %}
+  {% include callout.html %}
   {% include footer.html %}
   {% include scripts.html %}
   
