Add support for a blog
Signed-off-by: Shai Sachs <ssachs@ngpvan.com>

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,5 +11,8 @@
     <li>
       <a href="#projects" onclick = $("#menu-close").click(); >Projects</a>
     </li>
+    <li>
+      <a href="#blog" onclick = $("#menu-close").click(); >Blog</a>
+    </li>
   </ul>
 </nav>
