--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,33 @@
----
-layout: page
----
-<div class="page">
+<!DOCTYPE html>
+<html lang="en">
 
-  <header>
-    <h1>{{ page.title }}</h1>
-  </header>
+  {% include head.html %}
 
-  <article class="page-content">
-    {{ content }}
-  </article>
+<body>
 
-</div>
+	{% include navigation.html %}
+
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-10 col-lg-offset-1 text-left">
+				<div class="page">
+
+					<header>
+						<h1>{{ page.title }}</h1>
+					</header>
+
+					<article class="page-content">
+						{{ content }}
+					</article>
+
+				</div> <!-- /.page -->
+			</div> <!-- /.col -->
+		</div> <!-- /.row -->
+	</div> <!-- /.container -->
+
+	{% include footer.html %}
+	{% include scripts.html %}
+  
+</body>
+
+</html>
