--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,41 @@
----
-layout: post
----
-<div class="post">
+<!DOCTYPE html>
+<html lang="en">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+  {% include head.html %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+<body>
 
-</div>
+	{% include navigation.html %}
+
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-10 col-lg-offset-1 text-left">
+
+				<div class="post">
+
+					<header class="post-header">
+						<h1 class="post-title">{{ page.title }}</h1>
+						<p class="post-meta">
+							{{ page.date | date: "%b %-d, %Y" }}
+							{% if page.author %} • {{ page.author }}{% endif %}
+							{% if page.meta %} • {{ page.meta }}{% endif %}
+						</p> <!-- /.post-meta -->
+					</header>
+
+					<article class="post-content">
+						{{ content }}
+					</article>
+
+				</div> <!-- /.post -->
+
+			</div> <!-- /.col -->
+		</div> <!-- /.row -->
+	</div> <!-- /.container -->
+
+	{% include footer.html %}
+	{% include scripts.html %}
+  
+</body>
+
+</html>
+
