--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,13 @@
 				<div class="post">
 
 					<header class="post-header">
-						<h1 class="post-title">{{ page.title }}</h1>
+						<h1 class="post-title"
+							{% if page.bannerimg %}
+								style="background-image: url({{ page.bannerimg }})"
+							{% endif %}
+							>
+							{{ page.title }}
+						</h1>
 						<p class="post-meta">
 							{{ page.date | date: "%b %-d, %Y" }}
 							{% if page.author %} • {{ page.author }}{% endif %}
