--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -242,6 +242,12 @@ ul.post-list {
     padding: 0;
 }
 
+.post h1.post-title {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+}
+
 /* Footer */
 
 footer {
