--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@
 				<div class="page">
 
 					<header>
-						<h1>{{ page.title }}</h1>
+						<h1 class="page-title">{{ page.title }}</h1>
 					</header>
 
 					<article class="page-content">
