--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -242,7 +242,8 @@ ul.post-list {
     padding: 0;
 }
 
-.post h1.post-title {
+.post h1.post-title,
+.page h1.page-title {
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
