--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -249,6 +249,11 @@ ul.post-list {
     text-align: center;
 }
 
+.post .credits {
+    font-size: 75%;
+    font-style: italic;
+}
+
 /* Footer */
 
 footer {
