--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,7 +1,7 @@
 <section id="blog" class="blog">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2>Blog</h2>
         
         <ul class="post-list">
@@ -10,7 +10,7 @@
               <h3><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
               <p><span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span></p>
               
-              <p>{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+              <p class="post-excerpt text-left">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
 
             </li>
           {% endfor %}
