Nicer reading for project and about body text
Signed-off-by: Shai Sachs <ssachs@ngpvan.com>

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,52 +9,52 @@
           <div class="col-md-3 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-compass fa-stack-1x text-primary"></i>
-            </span>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+              </span>
               <h4>
                 <strong>NGP VAN Innovation Platform</strong>
               </h4>
-              <p>As the Innovation Platform Director at NGP VAN, I manage our documentation and am the primary support person for API developers. I also guide our teams in designing APIs and oversee strategy for our API.</p>
+              <p class="project-desc">As the Innovation Platform Director at NGP VAN, I manage our documentation and am the primary support person for API developers. I also guide our teams in designing APIs and oversee strategy for our API.</p>
               <a href="http://developers.ngpvan.com" class="btn btn-light">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-bullhorn fa-stack-1x text-primary"></i>
-            </span>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-bullhorn fa-stack-1x text-primary"></i>
+              </span>
               <h4>
                 <strong>OpenVPB</strong>
               </h4>
-              <p>A website which allows VAN users to easily publish virtual phone banks and distribute them to volunteers painlessly. I developed this application during NGP VAN’s first hackathon.</p>
+              <p class="project-desc">A website which allows VAN users to easily publish virtual phone banks and distribute them to volunteers painlessly. I developed this application during NGP VAN’s first hackathon.</p>
               <a href="https://blog.ngpvan.com/openvpb-easier-way-phone-bank" class="btn btn-light">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-shield fa-stack-1x text-primary"></i>
-            </span>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+              </span>
               <h4>
                 <strong>Action Center</strong>
               </h4>
-              <p>An app which allows volunteers to earn points and badges in exchange for completing tasks to support a progressive cause or Democratic campaign. I led the team which developed this app in preparation for a ballot initiative in 2011, and subsequently expanded and generalized it for the 2012 mid-term elections. We won a series of Pollie awards for it!</p>
+              <p class="project-desc">An app which allows volunteers to earn points and badges in exchange for completing tasks to support a progressive cause or Democratic campaign. I led the team which developed this app in preparation for a ballot initiative in 2011, and subsequently expanded and generalized it for the 2012 mid-term elections. We won a series of Pollie awards for it!</p>
               <a href="https://www.ngpvan.com/content/action-center" class="btn btn-light">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-globe fa-stack-1x text-primary"></i>
-            </span>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-globe fa-stack-1x text-primary"></i>
+              </span>
               <h4>
                 <strong>Open Supporter Data Interface</strong>
               </h4>
-              <p>This initiative aims to provide progressives with a common data format for exchanging information about supporters and their activities. I’ve contributed to the specification, built the NGP VAN OSDI service, and now serve as the VP of Logistics for the coalition.</p>
+              <p class="project-desc">This initiative aims to provide progressives with a common data format for exchanging information about supporters and their activities. I’ve contributed to the specification, built the NGP VAN OSDI service, and now serve as the VP of Logistics for the coalition.</p>
               <a href="http://opensupporter.org/" class="btn btn-light">Learn More</a>
             </div>
           </div>
@@ -66,52 +66,52 @@
           <div class="col-md-3 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-calendar fa-stack-1x text-primary"></i>
-            </span>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-calendar fa-stack-1x text-primary"></i>
+              </span>
               <h4>
                 <strong>Cambridge book club</strong>
               </h4>
-              <p>I help organize this amazing book club. We read books and talk about them, and it’s always a really fascinating, interesting discussion. If you’re in the area and love books, you should come join us!</p>
+              <p class="project-desc">I help organize this amazing book club. We read books and talk about them, and it’s always a really fascinating, interesting discussion. If you’re in the area and love books, you should come join us!</p>
               <a href="http://www.meetup.com/Book-Club-for-Heartbreaking-Geniuses-and-Those-Who-Love-Them/events/229404910/" class="btn btn-light">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-heart fa-stack-1x text-primary"></i>
-            </span>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-heart fa-stack-1x text-primary"></i>
+              </span>
               <h4>
                 <strong>Goodreads</strong>
               </h4>
-              <p>Since January 2013, I’ve done my best to review every book I read. The result is a blog-by-books that I enjoy revisiting from time to time.</p>
+              <p class="project-desc">Since January 2013, I’ve done my best to review every book I read. The result is a blog-by-books that I enjoy revisiting from time to time.</p>
               <a href="https://www.goodreads.com/user/show/16084341-shai-sachs" class="btn btn-light">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-glass fa-stack-1x text-primary"></i>
-            </span>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-glass fa-stack-1x text-primary"></i>
+              </span>
               <h4>
                 <strong>Boston Drinking Liberally</strong>
               </h4>
-              <p>I started the Boston chapter of Drinking Liberally in September 2004, and continued organizing it for ten years, stepping down in December 2014. I had some great times along the way, helping to promote quite a few progressive books (including Crashing the Gate) and hosting a few local politicos. They’re still going strong!</p>
+              <p class="project-desc">I started the Boston chapter of Drinking Liberally in September 2004, and continued organizing it for ten years, stepping down in December 2014. I had some great times along the way, helping to promote quite a few progressive books (including Crashing the Gate) and hosting a few local politicos. They’re still going strong!</p>
               <a href="https://www.ngpvan.com/content/action-center" class="btn btn-light">Learn More</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-book fa-stack-1x text-primary"></i>
-            </span>
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-book fa-stack-1x text-primary"></i>
+              </span>
               <h4>
                 <strong>Green Leaf</strong>
               </h4>
-              <p>In dribs and drabs I’ve been working on a story since February 2015. It’s about a plucky, environmentally-conscious entrepreneur who starts a solar panel company, and becomes wrapped up in a plot to clean up the energy industry and reverse global warming. Who knows, some day I might post it.</p>
+              <p class="project-desc">In dribs and drabs I’ve been working on a story since February 2015. It’s about a plucky, environmentally-conscious entrepreneur who starts a solar panel company, and becomes wrapped up in a plot to clean up the energy industry and reverse global warming. Who knows, some day I might post it.</p>
             </div>
           </div>
         </div>
