--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,8 +19,14 @@
 								style="background-image: url({{ page.bannerimg }})"
 							{% endif %}
 							>
-							{{ page.title }}
+							<span class="title-text">{{ page.title }}</span>
 						</h1>
+
+						<ul class="text-muted bookmarks">
+							<li>&#10146; <a href="/">Home</a></li>
+							<li>&#10146; <a href="/blog-archive.html">Blog archive</a></li>
+						</ul>
+
 						<p class="post-meta">
 							{{ page.date | date: "%b %-d, %Y" }}
 							{% if page.author %} • {{ page.author }}{% endif %}
