Move blog to the top and tweak callout

--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -17,7 +17,7 @@
         </ul>
 
         <p><a href="{{ "/blog-archive.html" | prepend: site.baseurl }}">archive</a></p>
-        <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+        <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>-->
         
 
       </div>
