--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
     <h1>Shai Sachs</h1>
     <h3>Programming. Prose. Progress.</h3>
     <br>
-    <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+    <a href="#blog" class="btn btn-dark btn-lg">Read my blog</a>
   </div>
 </header>
