Better border for titles

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,11 @@
 				<div class="page">
 
 					<header>
-						<h1 class="page-title"><span class="title-text">{{ page.title }}</span></h1>
+						<h1 class="page-title">
+       <div class="title-plate">
+         <span class="title-text">{{ page.title }}</span>
+        </div>
+      </h1>
 					</header>
 
 					<article class="page-content">
