--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,9 @@
 								style="background-image: url({{ page.bannerimg }})"
 							{% endif %}
 							>
+      <div class="title-plate">
 							<span class="title-text">{{ page.title }}</span>
+      </div>
 						</h1>
 
 						<ul class="text-muted bookmarks">
