--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -251,13 +251,18 @@ ul.post-list {
     padding-top: 100px;
     padding-bottom: 100px;
     text-align: center;
+
+}
+
+.page h1.page-title .title-plate,
+.post h1.post-title .title-plate {
+    background-color: #000;
+    padding: 15px;
 }
 
 .post h1.post-title .title-text,
 .page h1.page-title .title-text {
-    background-color: #000;
     color: #fff;
-    padding: 15px;
 }
 
 .post .credits {
