--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
         <hr class="small">
         <p class="text-muted">Copyright &copy; {{ site.copyright }} 20{{ site.time | date: '%y' }}</p>
         <p class="text-muted">Theme by <a href="https://github.com/volny/stylish-portfolio-jekyll">volny</a></p>
-        <p class="text-muted">Photo by <a href="https://unsplash.com/@alisaanton?photo=ipdJIEMu9qE">Alisa Anton</a></p>
+        <p class="text-muted">Front Page Photo by <a href="https://unsplash.com/@alisaanton?photo=ipdJIEMu9qE">Alisa Anton</a></p>
       </div>
     </div>
   </div>
