--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,5 +14,8 @@
     <li>
       <a href="/#blog" onclick = $("#menu-close").click(); >Blog</a>
     </li>
+    <li>
+      <a href="/#bookreviews" onclick = $("#menu-close").click(); >Book Reviews</a>
+    </li>
   </ul>
 </nav>
