--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,6 +8,7 @@
   {% include navigation.html %}
   {% include header.html %}
   {% include blog.html %}
+  {% include bookreviews.html %}
   {% include projects.html %}
   {% include about.html %}
   {% include footer.html %}
