Add rating and dates read to book review template, tweak social media links
Signed-off-by: shaisachs <shaisachs@gmail.com>

--- a/_includes/bookreviews.html
+++ b/_includes/bookreviews.html
@@ -20,7 +20,11 @@
           {% endfor %}
         </ul>
 
-        <p><a href="{{ "/bookreviews-archive.html" | prepend: site.baseurl }}">archive</a></p>
+        <p>
+          <a href="{{ "/bookreviews-archive.html" | prepend: site.baseurl }}">archive</a>
+           •
+          <a href="https://www.goodreads.com/user/show/16084341-shai-sachs">Goodreads</a>
+        </p>
 
       </div>
     </div>
