--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,13 +21,16 @@
         {% endif %}
         <ul class="list-inline">
           <li>
-            <a href="https://facebook.com/{{ site.facebook_username }}"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+            <a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
           </li>
           <li>
-            <a href="https://twitter.com/{{ site.twitter_username }}"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+            <a href="https://github.com/{{ site.github_username }}" title="Github"><i class="fa fa-github fa-fw fa-3x"></i></a>
           </li>
           <li>
-            <a href="https://github.com/{{ site.github_username }}"><i class="fa fa-github fa-fw fa-3x"></i></a>
+            <a href="https://www.goodreads.com/user/show/16084341-shai-sachs" title="Goodreads"><i class="fa fa-bookmark fa-fw fa-3x"></i></a>
+          </li>
+          <li>
+            <a href="https://facebook.com/{{ site.facebook_username }}" title="Facebook"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
           </li>
         </ul>
         <hr class="small">
