--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -80,13 +80,13 @@
             <div class="service-item">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-heart fa-stack-1x text-primary"></i>
+                <i class="fa fa-star fa-stack-1x text-primary"></i>
               </span>
               <h4>
-                <strong>Goodreads</strong>
+                <strong>Book Reviews</strong>
               </h4>
               <p class="project-desc">Since January 2013, I’ve done my best to review every book I read. The result is a blog-by-books that I enjoy revisiting from time to time.</p>
-              <a href="https://www.goodreads.com/user/show/16084341-shai-sachs" class="btn btn-light">Learn More</a>
+<!--              <a href="https://www.goodreads.com/user/show/16084341-shai-sachs" class="btn btn-light">Learn More</a> -->
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
