Remove book review project and rebalance projects row
Signed-off-by: shaisachs <shaisachs@gmail.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
     <h1>Shai Sachs</h1>
     <h3>Programming. Prose. Progress.</h3>
     <br>
-    <a href="#blog" class="btn btn-dark btn-lg">Read my blog</a>
+    <a href="#blog" class="btn btn-dark btn-lg">Blog</a>
+    <a href="#bookreviews" class="btn btn-dark btn-lg">Book Reviews</a>
   </div>
 </header>
