--- a/_includes/bookreviews.html
+++ b/_includes/bookreviews.html
@@ -5,18 +5,16 @@
         <h2>Book Reviews</h2>
         
         <ul class="post-list">
-          {% for post in site.posts limit:3 %}
-            {% if post.layout == "bookreview" %}
-              <li>
-                <h3><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
+          {% for post in site.posts | where:"layout","bookreview" limit:3 %}
+            <li>
+              <h3><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
 
-                <p><img align="left" src="{{ post.booksmallimage }}" /></p>
+              <p><img align="left" src="{{ post.booksmallimage }}" /></p>
 
-                <p><span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span></p>
-                
-                <p class="post-excerpt text-left">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
-              </li>
-            {% endif %}
+              <p><span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span></p>
+              
+              <p class="post-excerpt text-left">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+            </li>
           {% endfor %}
         </ul>
 
