Better goodreads icon
Signed-off-by: shaisachs <ssachs@ngpvan.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,13 @@
             <a href="https://github.com/{{ site.github_username }}" title="Github"><i class="fa fa-github fa-fw fa-3x"></i></a>
           </li>
           <li>
-            <a href="https://www.goodreads.com/user/show/16084341-shai-sachs" title="Goodreads"><i class="fa fa-bookmark fa-fw fa-3x"></i></a>
+            <a href="https://www.goodreads.com/user/show/16084341-shai-sachs" title="Goodreads">
+              <!-- from https://github.com/FortAwesome/Font-Awesome/issues/1715 -->
+              <span class="icon-stack">
+                  <i class="icon-sign-blank icon-stack-base"></i>
+                  <i class="icon-light"><span style="font-family:helvetica;">g</span></i>
+              </span>
+            </a>
           </li>
           <li>
             <a href="https://facebook.com/{{ site.facebook_username }}" title="Facebook"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
