--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
               <!-- from https://github.com/FortAwesome/Font-Awesome/issues/1715 -->
               <span class="icon-stack">
                   <i class="icon-sign-blank icon-stack-base"></i>
-                  <i class="icon-light"><span style="font-family:helvetica;">g</span></i>
+                  <i class="icon-light fa fa-fw fa-3x"><span style="font-family:helvetica;">g</span></i>
               </span>
             </a>
           </li>
