--- a/_layouts/bookreview.html
+++ b/_layouts/bookreview.html
@@ -9,12 +9,14 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-1 text-left">
+			<div class="col-sm-1">
 				<div class="bookreview-cover">
-					<img src="{{ page.bookcoverimage }}" />
+					{% if page.bookcoverimage %}
+						<img src="{{ page.bookcoverimage }}" />
+					{% endif %}
 				</div>
 			</div>
-			<div class="col-lg-8 col-lg-offset-3 text-left">
+			<div class="col-lg-10 col-sm-offset-1 text-left">
 
 				<div class="post">
 
