--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@
 						{{ content }}
 
 						{% if page.photographer %}
-							<p class="credits">Photo courtesy of
+							<p class="credits">Image courtesy of
 								{% if page.photographerurl %}
 									<a href="{{ page.photographerurl }}">
 								{% endif %}
