--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,6 +6,9 @@
       <a href="/#top"  onclick = $("#menu-close").click(); >Home</a>
     </li>
     <li>
+      <a href="/#subscribe" onclick = $("#menu-close").click(); >Subscribe</a>
+    </li>
+    <li>
       <a href="/#about" onclick = $("#menu-close").click(); >About</a>
     </li>
     <li>
