--- a/_layouts/bookreview.html
+++ b/_layouts/bookreview.html
@@ -33,7 +33,7 @@
 
 						<ul class="text-muted bookmarks">
 							<li>&#10146; <a href="/">Home</a></li>
-							<li>&#10146; <a href="/bookreviews-archive.html">Book reviews archive</a></li>
+							<li>&#10146; <a href="/bookreviews-archive.html">Book reviews</a></li>
 						</ul>
 
 						<p class="post-meta">
