--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -11,6 +11,7 @@
   {% include bookreviews.html %}
   {% include projects.html %}
   {% include about.html %}
+  {% include subscribe.html %}
   {% include footer.html %}
   {% include scripts.html %}
   
