--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
 
 						<ul class="text-muted bookmarks">
 							<li>&#10146; <a href="/">Home</a></li>
-							<li>&#10146; <a href="/blog-archive.html">Blog archive</a></li>
+							<li>&#10146; <a href="/blog-archive.html">Blog posts</a></li>
 						</ul>
 
 						<p class="post-meta">
