--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,4 +1,4 @@
-<aside class="call-to-action bg-primary">
+<aside class="call-to-action bg-primary" id="subscribe">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
