Fix blog/review crossed wires
Signed-off-by: Shai Sachs <shaisachs@gmail.com>

--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -3,9 +3,11 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <h2>Blog</h2>
+        
         <ul class="post-list">
           {% assign blogposts = site.posts | where:'layout', 'post' %}
-          {% for post in blogposts | where:"layout","post" limit:3 %}
+
+          {% for post in blogposts | limit:3 %}
             <li>
               <h3><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
               <p><span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span></p>
