--- a/_includes/bookreviews.html
+++ b/_includes/bookreviews.html
@@ -7,15 +7,13 @@
         <ul class="post-list">
           {% assign bookreviews = site.posts | where:'layout', 'bookreview' %}
 
-          {% for post in bookreviews | limit:3 %}
+          {% for review in bookreviews | limit:3 %}
             <li>
-              <h3><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
+              <h3><a class="post-link" href="{{ review.url | prepend: site.baseurl }}">{{ review.title }}</a></h3>
 
-              <p><img align="left" src="{{ post.booksmallimage }}" /></p>
-
-              <p><span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span></p>
+              <p><span class="post-meta">{{ review.date | date: "%b %-d, %Y" }}</span></p>
               
-              <p class="post-excerpt text-left">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+              <p class="post-excerpt text-left">{{ review.excerpt | remove: '<p>' | remove: '</p>' }}</p>
             </li>
           {% endfor %}
         </ul>
