--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
         <p class="lead">I'm a software developer who loves progressive politics and wonderful prose.</p>
         
         <div class="about-body col-lg-8 col-lg-offset-2 text-left">
-          <p>During the day I work as a Software Architect at Wayfair, which means I work with a variety of teams as they puzzle out some fascinating challenges related to our catalog. I’ve spent decades as a progressive activist, and about the same amount time as a software developer. I started out with C, dabbled in Java, spent a little too long with PHP and <a href="https://www.drupal.org/u/shaisachs">Drupal</a>, had some laughs with NodeJS, but seem to be hanging around .NET more and more these days.</p>
+          <p>During the day I work as a Software Architect at Wayfair, which means I work with a variety of teams as they puzzle out some fascinating challenges related to our catalog. I’ve spent decades as a progressive activist, and about the same amount of time as a software developer. I started out with C, dabbled in Java, spent a little too long with PHP and <a href="https://www.drupal.org/u/shaisachs">Drupal</a>, had some laughs with NodeJS, but seem to be hanging around .NET more and more these days.</p>
           
           <p>I love reading, especially literary fiction, and have been doing my best to write a review of every single book I’ve read since 2013. Since I believe turnaround is fair play, I’ve dabbled in some writing projects of my own, and might one day share them. In my spare time I help organize a fun and fascinating <a href="http://www.meetup.com/Book-Club-for-Heartbreaking-Geniuses-and-Those-Who-Love-Them/events/229404910/">book club</a>.</p>
         </div> <!-- .about-body -->
