Add projects and layout

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,92 +5,39 @@
       <div class="col-lg-10 col-lg-offset-1">
         <h2>Projects</h2>
         <hr class="small">
+
+
         <div class="row">
+        {% assign projects = site.posts | where:'layout', 'project' | sort:'order' %}
+
+        {% for project in projects | limit:6 %}        
           <div class="col-md-4 col-sm-6">
             <div class="service-item">
               <span class="fa-stack fa-4x">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                <i class="fa fa-{{ project.icon }} fa-stack-1x text-primary"></i>
               </span>
               <h4>
-                <strong>NGP VAN Innovation Platform</strong>
+                <strong>{{ project.title }}</strong>
               </h4>
-              <p class="project-desc">As the Innovation Platform Director at NGP VAN, I manage our documentation and am the primary support person for API developers. I also guide our teams in designing APIs and oversee strategy for our API.</p>
-              <a href="http://developers.ngpvan.com" class="btn btn-light">Learn More</a>
+              <p class="project-desc">{{ project.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+              {% if post.url %}
+                <a href="{{ project.url }}" class="btn btn-light">Learn More</a>
+              {% endif %}
             </div>
           </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-bullhorn fa-stack-1x text-primary"></i>
-              </span>
-              <h4>
-                <strong>OpenVPB</strong>
-              </h4>
-              <p class="project-desc">A website which allows VAN users to easily publish virtual phone banks and distribute them to volunteers painlessly. I developed this application during NGP VAN’s first hackathon.</p>
-              <a href="https://blog.ngpvan.com/openvpb-easier-way-phone-bank" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-              </span>
-              <h4>
-                <strong>Action Center</strong>
-              </h4>
-              <p class="project-desc">An app which allows volunteers to earn points and badges in exchange for completing tasks to support a progressive cause or Democratic campaign. I led the team which developed this app in preparation for a ballot initiative in 2011, and subsequently expanded and generalized it for the 2012 mid-term elections. We won a series of Pollie awards for it!</p>
-              <a href="https://www.ngpvan.com/content/action-center" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
+
+          {% if project.order == "3" %}
         </div>
         <!-- /.row (nested) -->
         
-		<!-- Hobbies -->
         <div class="row">
-          <div class="col-md-4 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-calendar fa-stack-1x text-primary"></i>
-              </span>
-              <h4>
-                <strong>Cambridge book club</strong>
-              </h4>
-              <p class="project-desc">I help organize this amazing book club. We read books and talk about them, and it’s always a really fascinating, interesting discussion. If you’re in the area and love books, you should come join us!</p>
-              <a href="http://www.meetup.com/Book-Club-for-Heartbreaking-Geniuses-and-Those-Who-Love-Them/events/229404910/" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-glass fa-stack-1x text-primary"></i>
-              </span>
-              <h4>
-                <strong>Boston Drinking Liberally</strong>
-              </h4>
-              <p class="project-desc">I started the Boston chapter of Drinking Liberally in September 2004, and continued organizing it for ten years, stepping down in December 2014. I had some great times along the way, helping to promote quite a few progressive books (including Crashing the Gate) and hosting a few local politicos. They’re still going strong!</p>
-              <a href="https://www.ngpvan.com/content/action-center" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-book fa-stack-1x text-primary"></i>
-              </span>
-              <h4>
-                <strong>Green Leaf</strong>
-              </h4>
-              <p class="project-desc">In dribs and drabs I’ve been working on a story since February 2015. It’s about a plucky, environmentally-conscious entrepreneur who starts a solar panel company, and becomes wrapped up in a plot to clean up the energy industry and reverse global warming. Who knows, some day I might post it.</p>
-            </div>
-          </div>
+          {% endif %}
+        {% endfor %}
+
         </div>
         <!-- /.row (nested) -->
-        
+                
       </div>
       <!-- /.col-lg-10 -->
     </div>
