--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -21,7 +21,7 @@
                 <strong>{{ project.title }}</strong>
               </h4>
               <p class="project-desc">{{ project.excerpt | remove: '<p>' | remove: '</p>' }}</p>
-              {% if post.url %}
+              {% if project.url %}
                 <a href="{{ project.url }}" class="btn btn-light">Learn More</a>
               {% endif %}
             </div>
