Reverse order and use weight

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -27,7 +27,7 @@
             </div>
           </div>
 
-          {% if project.order == "3" %}
+          {% if project.weight == 4 %}
         </div>
         <!-- /.row (nested) -->
         
